--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "simple-mern-blog",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
     "react": "^17.0.1",
@@ -16,8 +18,6 @@
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
-  "proxy": "http://localhost:4000",
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
